# nbe-financial-advisor-ai-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: __init__.py  config.py  database.py  main.py
app/backend_db/: __init__.py  _generated_models.py  models.py
app/core/: audit.py  config.py  db.py  embedding.py  jinja.py  llm.py  logging.py  observability.py  request_logging.py  security.py  storage.py  system.py
compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
compose/langfuse/: docker-compose.yml
compose/mineru/: docker-compose.yml
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_add_phase1_and_phase2_own_tables.py  a6171cff73ac_add_categories_table.py  b7d2a48f9c1e_drop_categories_table.py  f4b0592bb954_initial_empty_baseline.py
scripts/: gen_backend_models.py
specs/001-ai-service-scaffolding/: plan.md
specs/002-phase2-agentic-pipelines/: spec.md  tasks.md
specs/003-object-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-document-processor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-statement-normalization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-api-documentation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-embedding-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-embed-transactions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-chat-streaming-contract/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-fix-uuid-id-types/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-mineru-mock-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-structured-logging-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-langfuse-observability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-env-config-consistency/: plan.md  (+5 more)
tests/: conftest.py  test_app.py  test_migrations.py
(+151 files in other folders)
