[project]
name = "nbe-ai-service"
version = "0.1.0"
description = "Internal FastAPI AI service for the NBE AI-PFM platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "langchain-openai>=0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.9",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.ruff]
line-length = 100
exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
