[project]
name = "nbe-ai-service"
version = "0.1.0"
description = "Internal FastAPI AI service for the NBE AI-PFM platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "numpy>=2.0",
    "aioboto3>=15.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.9",
]
# Code-generation only — pinned EXACT for deterministic backend-mirror output.
# Kept out of default-groups so runtime and CI never install it; activate with
# `uv run --group codegen ...` when regenerating app/backend_db/models.py.
# psycopg is the SYNC driver sqlacodegen needs (runtime stays asyncpg-only).
codegen = [
    "sqlacodegen==4.0.4",
    "psycopg[binary]==3.3.4",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.ruff]
line-length = 100
exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
